@@ -5,7 +5,13 @@
 ################################################################################
 
 # Start jolokia
-com.openexchange.jolokia.start = false
+com.openexchange.jolokia.start = true
 
 # Under what name jolokia will be published
 com.openexchange.jolokia.servlet.name = /servlet/jolokia
+
+# User used for authentication with HTTP Basic Authentication. If not given, no authentication is used.
+com.openexchange.jolokia.user = testuser
+
+# Password used for authentification, if not set "password" is used. Only needed if com.openexchange.jolokia.user is used
+#com.openexchange.jolokia.password
