@@ -2,4 +2,9 @@ Changes done inside org.jolokia
 
 org.jolokia.osgi.servlet.JolokiaServlet.java
 	- not using LogHandler provided by Jolokia
+
+org.jolokia.osgi.JolokiaAuthenticatedHttpContext.java
+	- visibility changed to public
 	
+org.jolokia.osgi.JolokiaHttpContext
+	- visibility changed to public
